shorten loss estimation part

--- a/experiments/run_v2.ipynb
+++ b/experiments/run_v2.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c9dc2db1",
    "metadata": {
     "tags": []
@@ -179,7 +179,7 @@
        "65"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "469c14fb",
    "metadata": {
     "scrolled": true,
@@ -267,7 +267,7 @@
        " 'z']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e272950b",
    "metadata": {
     "tags": []
@@ -290,7 +290,7 @@
        "[46, 43, 50, 50, 53, 3]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "41628c78",
    "metadata": {
     "tags": []
@@ -313,7 +313,7 @@
        "'?eI\\np'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "2c198456",
    "metadata": {
     "tags": []
@@ -348,7 +348,7 @@
        "tensor([18, 47, 56,  ..., 45,  8,  0])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "99e805f1",
    "metadata": {
     "tags": []
@@ -368,16 +368,16 @@
     {
      "data": {
       "text/plain": [
-       "1115394"
+       "(1115394, 34856.0625)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(mytext.data)"
+    "len(mytext.data), len(mytext.data)/32"
    ]
   },
   {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a1639896-2aff-4148-9cb3-48b62268d87f",
    "metadata": {
     "tags": []
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a0ab8e28-b0e5-4389-b7b2-d8b3be2d284d",
    "metadata": {
     "tags": []
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c9e4fbe6",
    "metadata": {
     "tags": []
@@ -600,10 +600,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor(4.1078, grad_fn=<NllLossBackward0>)"
+       "tensor(4.0444, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f96d5656",
    "metadata": {
     "tags": []
@@ -623,10 +623,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[4.1078]], grad_fn=<NegBackward0>)"
+       "tensor([[4.0444]], grad_fn=<NegBackward0>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "cf5bf24c-439f-453e-8229-0cda30ea79dc",
    "metadata": {
     "tags": []
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "baec96e8-b46b-47c7-a2e7-f3a507009502",
    "metadata": {
     "tags": []
@@ -678,10 +678,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor(4.3577, grad_fn=<NllLossBackward0>)"
+       "tensor(4.3987, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "3a204ecc-764f-49d7-b452-10bd2a54310c",
    "metadata": {
     "tags": []
@@ -713,13 +713,12 @@
     "        nb_epochs=5,\n",
     "        batch_size=32,\n",
     "        learning_rate=1e-2,\n",
-    "        eval_interval = 100,\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "50ee5a20-8e15-4476-a346-61f16784b206",
    "metadata": {
     "tags": []
@@ -729,7 +728,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-02 12:12:51,031 INFO: Epoch 0: train_loss = 117379.45488739014, eval_loss = 13100.237580537796\n"
+      "2023-03-06 11:33:23,950 INFO: Epoch 0: train_loss = 4.197874546051025, eval_loss = 4.197874546051025\n"
      ]
     },
     {
@@ -737,7 +736,7 @@
       "text/plain": [
        "Timer unit: 1e-09 s\n",
        "\n",
-       "Total time: 18.4048 s\n",
+       "Total time: 0.515965 s\n",
        "File: /home/experiments/../src/v2.py\n",
        "Function: train at line 65\n",
        "\n",
@@ -749,40 +748,39 @@
        "    68                                                   text: TextProcessor,\n",
        "    69                                                   batch_size: int = 32,\n",
        "    70                                                   learning_rate: float = 1e-2,\n",
-       "    71                                                   eval_interval: int = 100,\n",
-       "    72                                               ):\n",
-       "    73         1     221500.0 221500.0      0.0          optimizer = torch.optim.AdamW(self.parameters(), lr=learning_rate)\n",
-       "    74         5      41200.0   8240.0      0.0          for ep in range(nb_epochs):\n",
-       "    75         5    1063300.0 212660.0      0.0              optimizer.zero_grad()\n",
-       "    76         5    7837700.0 1567540.0      0.0              x_train, y_train = text.get_batch(\n",
-       "    77         5      40500.0   8100.0      0.0                  batch_size=batch_size, block_size=self.block_size, split=\"train\"\n",
-       "    78                                                       )\n",
-       "    79         5     294400.0  58880.0      0.0              x_train = x_train.to(self.device)\n",
-       "    80         5     142300.0  28460.0      0.0              y_train = y_train.to(self.device)\n",
-       "    81         5    3386200.0 677240.0      0.0              loss = self.loss(logits=self.forward(x_train), y=y_train)\n",
-       "    82         5    1812400.0 362480.0      0.0              loss.backward()\n",
-       "    83         5    2388300.0 477660.0      0.0              optimizer.step()\n",
-       "    84                                           \n",
-       "    85                                                       # Estimate train and validation loss\n",
-       "    86         4      34700.0   8675.0      0.0              if ep % eval_interval == 0:\n",
-       "    87         1      23800.0  23800.0      0.0                  with torch.no_grad():\n",
-       "    88         1       9000.0   9000.0      0.0                      loss_split = {}\n",
-       "    89         2      17200.0   8600.0      0.0                      for split in [\"train\", \"val\"]:\n",
-       "    90         2      20000.0  10000.0      0.0                          text_iterator = text.iterator_all(\n",
-       "    91         2      15900.0   7950.0      0.0                              batch_size=batch_size,\n",
-       "    92         2      16100.0   8050.0      0.0                              split=split,\n",
-       "    93         2      17900.0   8950.0      0.0                              block_size=self.block_size\n",
-       "    94                                                                   )\n",
-       "    95         2     272800.0 136400.0      0.0                          _all_losses = []\n",
-       "    96     34855 8114263200.0 232800.6     44.1                          for bb in text_iterator:\n",
-       "    97     34855  391234700.0  11224.6      2.1                              x, y = bb\n",
-       "    98     34855 6142456200.0 176228.8     33.4                              model_x = self.forward(x)\n",
-       "    99     34855  787087400.0  22581.8      4.3                              logger.debug(f\"x.shape = {x.shape}, y.shape={y.shape}, model_x.shape = {model_x.shape}\")\n",
-       "   100     34855 2950484600.0  84650.3     16.0                              _all_losses.append(self.loss(model_x, y).item())\n",
-       "   101         2     309200.0 154600.0      0.0                          loss_split[split] = sum(_all_losses)\n",
-       "   102         1    1332200.0 1332200.0      0.0                      logger.info(\n",
-       "   103         1      19000.0  19000.0      0.0                          f\"Epoch {ep}: train_loss = {loss_split['train']}, eval_loss = {loss_split['val']}\"\n",
-       "   104                                                               )"
+       "    71                                                   nb_batch_eval: int = 200,\n",
+       "    72                                                   eval_period: int = 10,\n",
+       "    73                                               ):\n",
+       "    74         1     277600.0 277600.0      0.1          optimizer = torch.optim.AdamW(self.parameters(), lr=learning_rate)\n",
+       "    75         5      53800.0  10760.0      0.0          for ep in range(nb_epochs):\n",
+       "    76         5    3214300.0 642860.0      0.6              optimizer.zero_grad()\n",
+       "    77         5    9118000.0 1823600.0      1.8              x_train, y_train = text.get_batch(\n",
+       "    78         5      47100.0   9420.0      0.0                  batch_size=batch_size, block_size=self.block_size, split=\"train\"\n",
+       "    79                                                       )\n",
+       "    80         5     533500.0 106700.0      0.1              x_train = x_train.to(self.device)\n",
+       "    81         5     261500.0  52300.0      0.1              y_train = y_train.to(self.device)\n",
+       "    82         5    7328300.0 1465660.0      1.4              loss = self.loss(logits=self.forward(x_train), y=y_train)\n",
+       "    83         5    7428000.0 1485600.0      1.4              loss.backward()\n",
+       "    84         5    7276200.0 1455240.0      1.4              optimizer.step()\n",
+       "    85                                           \n",
+       "    86                                                       # Estimate train and validation loss\n",
+       "    87         4      34600.0   8650.0      0.0              if ep % eval_period == 0:\n",
+       "    88         1      24600.0  24600.0      0.0                  with torch.no_grad():\n",
+       "    89         1       8500.0   8500.0      0.0                      loss_split = {}\n",
+       "    90         2      16300.0   8150.0      0.0                      for split in [\"train\", \"val\"]:\n",
+       "    91         2      79300.0  39650.0      0.0                          _all_losses = []\n",
+       "    92       400    3128200.0   7820.5      0.6                          for bb in range(nb_batch_eval):\n",
+       "    93       400  341356200.0 853390.5     66.2                              x_, y_ = text.get_batch(\n",
+       "    94       400    3032100.0   7580.2      0.6                                  batch_size=batch_size, block_size=self.block_size, split=split\n",
+       "    95                                                                       )\n",
+       "    96       400   14377700.0  35944.2      2.8                              x_ = x_train.to(self.device)\n",
+       "    97       400   11551900.0  28879.8      2.2                              y_ = y_train.to(self.device)\n",
+       "    98       400   98151200.0 245378.0     19.0                              loss_ = self.loss(logits=self.forward(x_), y=y_)\n",
+       "    99       400    3532200.0   8830.5      0.7                              _all_losses.append(loss_)\n",
+       "   100         2    1026200.0 513100.0      0.2                          loss_split[split] = sum(_all_losses) / (nb_batch_eval)\n",
+       "   101         1    4074000.0 4074000.0      0.8                      logger.info(\n",
+       "   102         1      33500.0  33500.0      0.0                          f\"Epoch {ep}: train_loss = {loss_split['train']}, eval_loss = {loss_split['val']}\"\n",
+       "   103                                                               )"
       ]
      },
      "metadata": {},
@@ -803,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "120e0a6b",
    "metadata": {
     "tags": []
@@ -813,27 +811,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-02 11:51:59,109 INFO: Epoch 0: train_loss = 137030.58601474762, eval_loss = 15230.963001966476\n",
-      "2023-03-02 11:52:12,770 INFO: Epoch 1: train_loss = 132761.62109375, eval_loss = 14766.106065750122\n",
-      "2023-03-02 11:52:26,123 INFO: Epoch 2: train_loss = 128876.8922624588, eval_loss = 14341.531868696213\n",
-      "2023-03-02 11:52:39,690 INFO: Epoch 3: train_loss = 125400.47093701363, eval_loss = 13963.03724360466\n",
-      "2023-03-02 11:52:54,518 INFO: Epoch 4: train_loss = 122253.63994884491, eval_loss = 13619.354886054993\n"
+      "2023-03-06 11:35:53,859 INFO: Epoch 0: train_loss = 4.212040424346924, eval_loss = 4.212040424346924\n",
+      "2023-03-06 11:35:54,740 INFO: Epoch 300: train_loss = 2.6286563873291016, eval_loss = 2.6286563873291016\n",
+      "2023-03-06 11:35:55,616 INFO: Epoch 600: train_loss = 2.494049310684204, eval_loss = 2.494049310684204\n",
+      "2023-03-06 11:35:56,468 INFO: Epoch 900: train_loss = 2.6837546825408936, eval_loss = 2.6837546825408936\n",
+      "2023-03-06 11:35:57,327 INFO: Epoch 1200: train_loss = 2.4976119995117188, eval_loss = 2.4976119995117188\n",
+      "2023-03-06 11:35:58,221 INFO: Epoch 1500: train_loss = 2.5835940837860107, eval_loss = 2.5835940837860107\n",
+      "2023-03-06 11:35:59,110 INFO: Epoch 1800: train_loss = 2.590355157852173, eval_loss = 2.590355157852173\n",
+      "2023-03-06 11:35:59,993 INFO: Epoch 2100: train_loss = 2.4787962436676025, eval_loss = 2.4787962436676025\n",
+      "2023-03-06 11:36:00,882 INFO: Epoch 2400: train_loss = 2.479492425918579, eval_loss = 2.479492425918579\n",
+      "2023-03-06 11:36:01,852 INFO: Epoch 2700: train_loss = 2.534669876098633, eval_loss = 2.534669876098633\n"
      ]
     }
    ],
    "source": [
     "model.train(\n",
     "    text=mytext,\n",
-    "    nb_epochs=5, # 3000\n",
+    "    nb_epochs=3000,\n",
     "    batch_size=32,\n",
     "    learning_rate=1e-2,\n",
-    "    eval_interval = 1,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e3af88d0",
    "metadata": {
     "tags": []
@@ -850,10 +852,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1])"
+       "tensor([16])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,50 +866,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "32f4bd45",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "ARDWh y an: ir aurt, d s es ES: y,\n",
-      "pitharapalloul INE: Wh fof mils sttar: blalackicher thivexpth s avan tr I o wen athare\n",
+      "N?3GBFGMH-:&;IHSEBM\n",
+      "GNFF;RF?3:3GM!SEQ,,P'BAD,J?!FFK?3GDAC?3$DGIG!C'3S\n",
+      "MNF&.3JM$$K$DBO&HNS$I;-JEL 'KRI'FQG?RJ\n",
+      "AG\n",
+      "F'LO?NFQQB?QEGF;BBHR& J?NFC?IO\n",
+      "'?QO'&!AHN?PK&3L?:3GBHM\n",
+      "B!C$FJ-D \n",
+      "DG';M! ;-$PCQO!OGFG?3GM-.-O\n",
+      "J'MNH!;K:R';R,P'FN&\n",
+      "GP'J'&K&;K:Q\n",
+      "M'3;-\n",
+      "-D\n",
+      "H?3R,,D-\n",
+      "P'I\n",
+      "-ICPMH?M-$?N ;3?K3SRQSRKNS3G'$\n",
+      "G'S\n",
+      ":-:3''N,&G&HCFB?M.3:3DEEM\n",
+      "PHRS,H-&S\n",
+      "JJFD-AC,M\n",
+      ",&QBFK'EJ,K:S3!RQE!\n",
+      "GFKNF-CE&&DGQ,;I$ D 3'!?3G'IF&J'DRQB$H\n",
+      ",M.R ?3CQM\n",
+      "S!C\n",
+      ",K:MS,'EF I3:OH?NNFDM'QB J?I\n",
+      "E$OC'ERS3JF?-RF$B?K:Q,-ROGDBA!S.QB :QCBC$J'NEQ-&KSNMC!-J'QBM!3$$G'.!;IRCSDRQB !L'BJ?&-MRKP$R:3! & .G' M BC?3-3IR,HPDRQO$M3GDJO\n",
+      "S&.I;KC,3?F\n",
       "\n",
-      "A:\n",
-      "By sld he rn.\n",
-      "GUCEOfut th n.\n",
-      "Cos jurrme urd.\n",
-      "HEToven,\n",
-      "DUCHein t whastr o,\n",
-      "GESHERENou he falos\n",
-      "Whay he, Su fath! when PEd:\n",
-      "I's out honfrot brif a whesstis hirteid s Tht s, Bes thamagorouthonorter cef, matsu,\n",
+      "MDMDLCESM!;IREGF-'A!N\n",
+      "GF&E!G'3' DQSKBCQSMB $ N\n",
+      "SE&CP'IJJBC?EGQMFF?&O'3GRJ?P&::'M3:BC?QS\n",
+      "R3JHJ3M3'IH\n",
       "\n",
-      "Me f h shastyof tot,\n",
-      "IV:\n",
-      "Ofond t rghalle? f t tive ste llu o aicr tt ly, d Ay, towakist toy hinghee mesothet h wnol s Heaclerimerethistle suny,\n",
-      "IZAnd inovestre, aly. the.\n",
+      "P&-F.P?Q?3?HRENF&M ;-'3'\n",
+      ",:F&$M\n",
+      "'SNMH?3SJ'S:3MR&'',;3DB?-N3:F&!K:FK$FK,SABGD\n",
+      "JF?3OF-K:&IO'LIO,' C'!'\n",
       "\n",
-      "Coueimosem:\n",
-      "To IURUThatimyour, he is issemato hthoith.\n",
-      "Whone grube\n",
-      "cond t y VONENoo:\n",
-      "Ask,\n",
-      "Nodns hir, othe te onu cos y wh KELUENUS IUCHonoryovillearoufat!'llinom,\n",
-      "\n",
-      "TUCAur.\n",
-      "AR:\n",
-      "YO: se t Ancks; by ayomanl faket he's yon mam sheais,-g; w, t! w-n, ishaye.\n",
-      "AROMyokitors whind h cer n at gr h tl.\n",
-      "\n",
-      "TENVI quewighaveaca IG OFachilioodusp S:\n",
-      "TUCOUELAlld nch wo be dan, trde. t ghererabur ttowhid?\n",
-      "A:\n",
-      "RY asell!\n",
-      "T: thepr; ceers l oss gord igan ee an s t ard ts o te angr anesieshilesthate s thlllat omu! d\n"
+      "'B GF'IKRQ&N.M .$?3&'IG:F'&L,3'CO$OABO&KRREFML?RSK:I33S?3!'HM:,HAB?N3\n",
+      ",H?'MR'M'C?GQNARQSNM3H\n",
+      "LM'B-B$G'&3?3JF'\n",
+      "QBJK:B?3',K:-DA!O!\n",
+      "PK.BF-E&:P'OE.B;G\n",
+      "M'L?HRG?SJFK$$G,F E$DJBAAR,CK:PK$PJ'N!3C?RAM?3J'BF  FQEG&PIRQSRQS,\n"
      ]
     }
    ],
