--- a/experiments/bag_of_words.ipynb
+++ b/experiments/bag_of_words.ipynb
@@ -66,8 +66,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.6361, -0.3220,  1.7799],\n",
-       "        [ 2.2120, -1.2736,  0.7472]])"
+       "tensor([[-3.2130, -0.6345, -3.4687],\n",
+       "        [ 0.4709,  0.0288,  0.3812]])"
       ]
      },
      "execution_count": 3,
@@ -90,8 +90,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.6361, -0.3220,  1.7799],\n",
-       "        [ 2.2120, -1.2736,  0.7472]])"
+       "tensor([[-3.2130, -0.6345, -3.4687],\n",
+       "        [ 0.4709,  0.0288,  0.3812]])"
       ]
      },
      "execution_count": 4,
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d77a3911-e087-4dab-b60a-6183e3687561",
    "metadata": {
     "tags": []
@@ -117,7 +117,7 @@
        "torch.Size([3, 6, 4, 2])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "9f65f830-dfd5-464d-b307-c0fa7b7be70c",
    "metadata": {
     "tags": []
@@ -158,7 +158,7 @@
        "        [8.]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "66aa6d32-4c71-4df2-bf01-33ee11a1a411",
    "metadata": {
     "tags": []
@@ -189,7 +189,7 @@
        "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "c256bf51-5556-4fbf-a59e-7f1b99658c01",
    "metadata": {
     "tags": []
@@ -213,14 +213,14 @@
        "torch.Size([4, 8, 2])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "C = torch.randn(4, 8, 2)\n",
-    "D = B @ C\n",
+    "D = weights @ C\n",
     "D.shape"
    ]
   },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "00e9e4da-014c-4245-a8e3-6857d2438e01",
    "metadata": {
     "tags": []
@@ -261,7 +261,7 @@
        "        [1., 1., 1., 1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "5e3ff1a3-b76f-4bee-995f-6927f56f3423",
    "metadata": {
     "tags": []
@@ -292,7 +292,7 @@
        "        [0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "336a1c29-05e4-4ee0-b83f-23273ecc6cbe",
    "metadata": {
     "tags": []
@@ -324,7 +324,7 @@
        "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "e667c97d-d75a-4a85-90e9-815e81b8fef4",
    "metadata": {
     "tags": []
@@ -352,17 +352,17 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.1661,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
-       "        [ 0.7549, -0.6352,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
-       "        [-0.5888,  0.5921, -0.5735,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
-       "        [-1.4654, -0.8489,  1.1032, -1.4104,    -inf,    -inf,    -inf,    -inf],\n",
-       "        [ 1.3734,  0.6371,  2.6707, -0.2718,  0.9070,    -inf,    -inf,    -inf],\n",
-       "        [-2.8097, -0.5699,  1.3901, -1.0474, -0.7544, -0.5896,    -inf,    -inf],\n",
-       "        [-0.7703, -0.4959,  0.7730,  0.2219,  0.2030,  1.0977,  1.0572,    -inf],\n",
-       "        [-0.9147, -0.9655, -0.5338,  0.6499, -0.9065,  0.8309,  0.4588, -1.3579]])"
+       "tensor([[-0.6851,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
+       "        [-0.5143,  1.5780,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
+       "        [ 0.1154,  1.4088,  1.1345,    -inf,    -inf,    -inf,    -inf,    -inf],\n",
+       "        [ 0.2455,  0.0146,  0.7242,  1.5113,    -inf,    -inf,    -inf,    -inf],\n",
+       "        [ 0.0629, -0.4085, -1.8356,  1.8961, -0.4704,    -inf,    -inf,    -inf],\n",
+       "        [ 0.1704,  0.2344, -1.1358, -1.4638, -0.6538,  1.9615,    -inf,    -inf],\n",
+       "        [ 0.7947, -0.3530,  0.2352,  0.9171, -0.4502, -0.8813,  1.2977,    -inf],\n",
+       "        [ 1.0420,  2.1455,  0.3926,  1.0247, -1.7611,  0.9412, -0.8895,  0.9052]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "c4c012dd-d53c-402c-8cc3-c9b2af8d829c",
    "metadata": {
     "tags": []
@@ -385,16 +385,16 @@
      "data": {
       "text/plain": [
        "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-       "        [0.8006, 0.1994, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-       "        [0.1897, 0.6178, 0.1926, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-       "        [0.0590, 0.1092, 0.7695, 0.0623, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-       "        [0.1678, 0.0804, 0.6141, 0.0324, 0.1053, 0.0000, 0.0000, 0.0000],\n",
-       "        [0.0100, 0.0940, 0.6673, 0.0583, 0.0782, 0.0922, 0.0000, 0.0000],\n",
-       "        [0.0399, 0.0526, 0.1870, 0.1077, 0.1057, 0.2587, 0.2484, 0.0000],\n",
-       "        [0.0512, 0.0487, 0.0750, 0.2449, 0.0516, 0.2935, 0.2023, 0.0329]])"
+       "        [0.1098, 0.8902, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1348, 0.4915, 0.3736, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1438, 0.1142, 0.2321, 0.5099, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1161, 0.0724, 0.0174, 0.7260, 0.0681, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1115, 0.1189, 0.0302, 0.0218, 0.0489, 0.6687, 0.0000, 0.0000],\n",
+       "        [0.1943, 0.0616, 0.1110, 0.2195, 0.0559, 0.0364, 0.3212, 0.0000],\n",
+       "        [0.1333, 0.4019, 0.0696, 0.1310, 0.0081, 0.1205, 0.0193, 0.1163]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "88841c38-dceb-4ffc-83b3-c19639f32529",
    "metadata": {
     "tags": []
@@ -424,7 +424,7 @@
        "        [1.0000]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,6 +437,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11535f88-7481-4a81-99f7-0f21066d59bf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74eb7b9b-b68a-40da-901b-d44b59320a5f",
    "metadata": {},
    "outputs": [],
    "source": []
