finish masked self-attention

--- a/experiments/self_attention.ipynb
+++ b/experiments/self_attention.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e550d780-c4ff-4d28-a37d-f845c03b52b9",
+   "metadata": {},
+   "source": [
+    "# Preamble"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "79f1dee7-1995-4d10-8438-5e5f35709dd9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0b321b8c-59ad-47e2-a5aa-37359ab789e3",
    "metadata": {
     "tags": []
@@ -10,7 +31,9 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torch.nn import functional"
+    "from torch.nn import functional\n",
+    "\n",
+    "from src.self_attention import ScaledDotProductSelfAttentionHead"
    ]
   },
   {
@@ -242,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "00e9e4da-014c-4245-a8e3-6857d2438e01",
    "metadata": {
     "tags": []
@@ -261,7 +284,7 @@
        "        [1., 1., 1., 1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "5e3ff1a3-b76f-4bee-995f-6927f56f3423",
    "metadata": {
     "tags": []
@@ -292,7 +315,7 @@
        "        [0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,19 +457,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e3bddd4-836b-4d88-97f7-3bcbeece0520",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Self Attention"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11535f88-7481-4a81-99f7-0f21066d59bf",
+   "execution_count": 3,
+   "id": "74eb7b9b-b68a-40da-901b-d44b59320a5f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "self_attention = ScaledDotProductSelfAttentionHead(512, 64, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ac24c628-0aef-41be-8ae0-ea73b254be98",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "self_attention.mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98b7c674-bd31-4389-adde-b2b7af29a8c3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 12, 64])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(32, 12, 512)\n",
+    "self_attention(x).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f6aa4226-f83b-4a7d-821a-20aecb9fa4d1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 8, 64])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(32, 8, 512)\n",
+    "self_attention(x).shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74eb7b9b-b68a-40da-901b-d44b59320a5f",
+   "id": "3e879274-b07b-4c9e-84af-1a8fc06c3b88",
    "metadata": {},
    "outputs": [],
    "source": []
