--- a/experiments/self_attention.ipynb
+++ b/experiments/self_attention.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "0b321b8c-59ad-47e2-a5aa-37359ab789e3",
    "metadata": {
     "tags": []
@@ -31,6 +31,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
     "from torch.nn import functional\n",
     "\n",
     "from src.self_attention import ScaledDotProductSelfAttentionHead"
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "98b7c674-bd31-4389-adde-b2b7af29a8c3",
    "metadata": {
     "tags": []
@@ -526,7 +527,7 @@
        "torch.Size([32, 12, 64])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "f6aa4226-f83b-4a7d-821a-20aecb9fa4d1",
    "metadata": {
     "tags": []
@@ -550,7 +551,7 @@
        "torch.Size([32, 8, 64])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,8 +563,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3e879274-b07b-4c9e-84af-1a8fc06c3b88",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "drop = nn.Dropout(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f10431e3-5e5e-49ad-9b72-3b02a97e67ef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([32, 8, 512]), torch.Size([32, 8, 512]))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop(x).shape, x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e05039c1-976f-4812-b35f-b8ce28393066",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.2500)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((x - drop(x))/x).min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6a3c3e8b-3051-4a2a-b2b6-da3e659e733c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.2632)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "35fbcdf5-ada5-42ca-b8c6-c8f9a6fa5a00",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.3290)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop(x)[0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e2ee20-04b0-43cd-82f9-87f7f4354623",
    "metadata": {},
    "outputs": [],
    "source": []
