finish multi-head attention

--- a/experiments/self_attention.ipynb
+++ b/experiments/self_attention.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0b321b8c-59ad-47e2-a5aa-37359ab789e3",
    "metadata": {
     "tags": []
@@ -34,7 +34,7 @@
     "import torch.nn as nn\n",
     "from torch.nn import functional\n",
     "\n",
-    "from src.self_attention import ScaledDotProductSelfAttentionHead"
+    "from src.self_attention import ScaledDotProductSelfAttentionHead, MultiHeadAttention"
    ]
   },
   {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "98b7c674-bd31-4389-adde-b2b7af29a8c3",
    "metadata": {
     "tags": []
@@ -527,7 +527,7 @@
        "torch.Size([32, 12, 64])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "f6aa4226-f83b-4a7d-821a-20aecb9fa4d1",
    "metadata": {
     "tags": []
@@ -551,7 +551,7 @@
        "torch.Size([32, 8, 64])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,20 +563,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "3e879274-b07b-4c9e-84af-1a8fc06c3b88",
+   "execution_count": 7,
+   "id": "82bfa509-ef6b-4a0d-81a6-d88d31741409",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "drop = nn.Dropout(0.2)"
+    "multiheadatt = MultiHeadAttention(8, 512, 64, 12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "f10431e3-5e5e-49ad-9b72-3b02a97e67ef",
+   "execution_count": 8,
+   "id": "2671cd56-558b-487a-bb83-503c85b81ce3",
    "metadata": {
     "tags": []
    },
@@ -584,91 +584,22 @@
     {
      "data": {
       "text/plain": [
-       "(torch.Size([32, 8, 512]), torch.Size([32, 8, 512]))"
+       "torch.Size([32, 8, 512])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "drop(x).shape, x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "e05039c1-976f-4812-b35f-b8ce28393066",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-0.2500)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((x - drop(x))/x).min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "6a3c3e8b-3051-4a2a-b2b6-da3e659e733c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-0.2632)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x[0,0,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "35fbcdf5-ada5-42ca-b8c6-c8f9a6fa5a00",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-0.3290)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "drop(x)[0,0,0]"
+    "multiheadatt(x).shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79e2ee20-04b0-43cd-82f9-87f7f4354623",
+   "id": "8fc09b6f-fd26-42f9-9d8b-09b2556ace02",
    "metadata": {},
    "outputs": [],
    "source": []
