--- a/experiments/self_attention.ipynb
+++ b/experiments/self_attention.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "79f1dee7-1995-4d10-8438-5e5f35709dd9",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "0b321b8c-59ad-47e2-a5aa-37359ab789e3",
    "metadata": {
     "tags": []
@@ -34,13 +34,17 @@
     "import torch.nn as nn\n",
     "from torch.nn import functional\n",
     "\n",
-    "from src.self_attention import ScaledDotProductSelfAttentionHead, MultiHeadAttention"
+    "from src.self_attention import ScaledDotProductSelfAttentionHead, MultiHeadAttention\n",
+    "from src.decoder import DecoderBlock"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b7a1bf6e-9ad9-4036-93ef-4e03aac09489",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Understanding what @ does"
    ]
@@ -156,7 +160,10 @@
   {
    "cell_type": "markdown",
    "id": "16a9e47e-157c-40e6-8881-36961156e939",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Efficient bag of words calculation"
    ]
@@ -251,7 +258,10 @@
   {
    "cell_type": "markdown",
    "id": "e6993052-f339-4f63-a66f-9a677dce2f71",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Beginning of self-attention"
    ]
@@ -469,19 +479,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "74eb7b9b-b68a-40da-901b-d44b59320a5f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "self_attention = ScaledDotProductSelfAttentionHead(512, 64, 12)"
+    "self_attention = ScaledDotProductSelfAttentionHead(\n",
+    "    dim_token_embedding=512, \n",
+    "    head_size=64, \n",
+    "    max_block_size=12\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "ac24c628-0aef-41be-8ae0-ea73b254be98",
    "metadata": {
     "tags": []
@@ -504,7 +518,7 @@
        "        [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "98b7c674-bd31-4389-adde-b2b7af29a8c3",
    "metadata": {
     "tags": []
@@ -527,7 +541,7 @@
        "torch.Size([32, 12, 64])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "f6aa4226-f83b-4a7d-821a-20aecb9fa4d1",
    "metadata": {
     "tags": []
@@ -551,7 +565,7 @@
        "torch.Size([32, 8, 64])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "82bfa509-ef6b-4a0d-81a6-d88d31741409",
    "metadata": {
     "tags": []
@@ -575,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "2671cd56-558b-487a-bb83-503c85b81ce3",
    "metadata": {
     "tags": []
@@ -587,7 +601,7 @@
        "torch.Size([32, 8, 512])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
