more tests + fix a few bugs

--- a/experiments/run_v2.ipynb
+++ b/experiments/run_v2.ipynb
@@ -160,14 +160,16 @@
   {
    "cell_type": "markdown",
    "id": "387c25b2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "c9dc2db1",
    "metadata": {
     "tags": []
@@ -179,7 +181,7 @@
        "65"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,6 +195,10 @@
    "execution_count": 10,
    "id": "469c14fb",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true,
     "tags": []
    },
@@ -405,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b969f55e",
    "metadata": {
     "tags": []
@@ -422,6 +428,92 @@
    "source": [
     "x, y = mytext.get_batch(batch_size=32, block_size=8)\n",
     "print(x.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8237d9f9-31d2-4201-b60e-2aafb77d2d1e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[59, 58,  1, 51, 63,  1, 58, 47],\n",
+       "         [ 1, 44, 43, 41, 49, 57,  2,  0],\n",
+       "         [ 1, 51, 39, 49, 43,  1, 61, 39],\n",
+       "         [53, 51, 43,  1, 57, 51, 43, 50],\n",
+       "         [26, 15, 17, 10,  0, 33, 52, 46],\n",
+       "         [58, 46, 39, 58,  1, 46, 43,  1],\n",
+       "         [43,  1, 59, 54,  6,  1, 39, 52],\n",
+       "         [50, 42,  1, 58, 46, 43, 51,  1],\n",
+       "         [56, 47, 40, 59, 52, 43, 57,  1],\n",
+       "         [52, 58,  2,  1, 61, 46, 63,  6],\n",
+       "         [14, 30, 27, 23, 17, 10,  0, 35],\n",
+       "         [47, 49, 43,  1, 52, 53, 58, 47],\n",
+       "         [52, 56, 63,  1, 58, 46, 43,  1],\n",
+       "         [43,  1, 58, 46, 43, 43,  6,  0],\n",
+       "         [42, 43,  1, 63, 53, 59,  1, 40],\n",
+       "         [ 6,  0, 37, 53, 59, 56,  1, 54],\n",
+       "         [54, 39, 56, 58,  6,  0, 13, 52],\n",
+       "         [53,  1, 42, 47, 52, 52, 43, 56],\n",
+       "         [43, 52,  1, 47, 57,  1, 47, 58],\n",
+       "         [35, 43, 56, 43,  1, 44, 43, 60],\n",
+       "         [43, 39, 56,  1, 50, 53, 56, 42],\n",
+       "         [47, 52,  1, 58, 46, 47, 57,  0],\n",
+       "         [50,  1, 40, 43,  1, 44, 43, 39],\n",
+       "         [56,  1, 58, 46, 43,  1, 61, 43],\n",
+       "         [56, 43,  1, 53, 44,  1, 39,  1],\n",
+       "         [ 1, 40, 43,  1, 58, 46, 43,  1],\n",
+       "         [ 1, 39, 41, 55, 59, 39, 47, 52],\n",
+       "         [ 1, 58, 46, 43,  1, 40, 43, 46],\n",
+       "         [61,  1, 51, 39, 52, 63,  1, 46],\n",
+       "         [58, 39, 49, 43,  1, 51, 63,  1],\n",
+       "         [52, 39, 51, 43,  1, 47, 57,  1],\n",
+       "         [45,  1, 42, 39, 52, 41, 43,  6]]),\n",
+       " tensor([[58,  1, 51, 63,  1, 58, 47, 51],\n",
+       "         [44, 43, 41, 49, 57,  2,  0, 35],\n",
+       "         [51, 39, 49, 43,  1, 61, 39, 63],\n",
+       "         [51, 43,  1, 57, 51, 43, 50, 50],\n",
+       "         [15, 17, 10,  0, 33, 52, 46, 39],\n",
+       "         [46, 39, 58,  1, 46, 43,  1, 47],\n",
+       "         [ 1, 59, 54,  6,  1, 39, 52, 42],\n",
+       "         [42,  1, 58, 46, 43, 51,  1, 46],\n",
+       "         [47, 40, 59, 52, 43, 57,  1, 39],\n",
+       "         [58,  2,  1, 61, 46, 63,  6,  1],\n",
+       "         [30, 27, 23, 17, 10,  0, 35, 46],\n",
+       "         [49, 43,  1, 52, 53, 58, 47, 41],\n",
+       "         [56, 63,  1, 58, 46, 43,  1, 18],\n",
+       "         [ 1, 58, 46, 43, 43,  6,  0, 14],\n",
+       "         [43,  1, 63, 53, 59,  1, 40, 59],\n",
+       "         [ 0, 37, 53, 59, 56,  1, 54, 56],\n",
+       "         [39, 56, 58,  6,  0, 13, 52, 42],\n",
+       "         [ 1, 42, 47, 52, 52, 43, 56,  1],\n",
+       "         [52,  1, 47, 57,  1, 47, 58,  1],\n",
+       "         [43, 56, 43,  1, 44, 43, 60, 43],\n",
+       "         [39, 56,  1, 50, 53, 56, 42,  5],\n",
+       "         [52,  1, 58, 46, 47, 57,  0, 58],\n",
+       "         [ 1, 40, 43,  1, 44, 43, 39, 56],\n",
+       "         [ 1, 58, 46, 43,  1, 61, 43, 39],\n",
+       "         [43,  1, 53, 44,  1, 39,  1, 40],\n",
+       "         [40, 43,  1, 58, 46, 43,  1, 51],\n",
+       "         [39, 41, 55, 59, 39, 47, 52, 58],\n",
+       "         [58, 46, 43,  1, 40, 43, 46, 53],\n",
+       "         [ 1, 51, 39, 52, 63,  1, 46, 53],\n",
+       "         [39, 49, 43,  1, 51, 63,  1, 50],\n",
+       "         [39, 51, 43,  1, 47, 57,  1, 32],\n",
+       "         [ 1, 42, 39, 52, 41, 43,  6,  0]]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y"
    ]
   },
   {
@@ -1044,8 +1136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b56f9ea4-4931-4eaa-9b36-b642727d8c66",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.randint(65, (32, 8)).max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c1a828-eefd-472c-9e8f-15e851258528",
    "metadata": {},
    "outputs": [],
    "source": []
